k8s/41-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-frontend
  namespace: "<<< IT-01 >>>"
  labels:
    app.kubernetes.io/name: portal-frontend
    app.kubernetes.io/part-of: magti-portal
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: portal-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
